--- a/config/templates/config/user_images.html
+++ b/config/templates/config/user_images.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -65,6 +66,7 @@
             transition: all 0.3s ease-in-out;
         }
 
+
         .body {
             width: 100%;
             height: auto;
@@ -106,7 +108,43 @@
             font-size: 1rem;
             color: #333;
         }
+        .curd {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin-top: 10px;
+        }
+        .curd a {
+            font-family: 'Poppins', sans-serif;
+            font-size: 1rem;
+            color: #fbfbfb;
+            transition: all 0.3s ease-in-out;
+            padding: 5px 15px;
+            border-radius: 5px;
+        }
+        .update {
+            background-color: #4a48e8;
+            
+        }
+        .update:hover {
+            background-color: #000000;
+            color: #fff;
+            transition: all 0.2s ease-in-out;
+        }
+        .delete {
+            background-color: #e84a4a;
+        }
+        .delete:hover {
+            background-color: #000000;
+            color: #fff;
+            transition: all 0.2s ease-in-out;
+        }
+        
+ 
+
+
         footer {
+            margin-top: calc(45vh - 10vh);
             width: 100%;
             height: 10vh;
             background-color: black;
@@ -126,9 +164,9 @@
             </div>
             <div class="menu_area">
                 <ul>
-                    <li class="page_active"><a href="{% url 'img_list' %}">Home</a></li>
+                    <li ><a href="{% url 'img_list' %}">Home</a></li>
                     <li><a href="{% url 'img_add' %}">Add</a></li>
-                    <li><a href="{% url 'user_img_list' %}">Profile</a></li>
+                    <li  class="page_active"><a href="">Profile</a></li>
                     {% if user.is_authenticated %}
                         <li><a href="">Logout</a></li>
                     {% else %}
@@ -141,15 +179,19 @@
 
     <div class="body">
         <div class="inner_body">
-            {%for i in images%}
-            <div class="img_card">
-                <img src="{{ i.image.url }}" alt="{{ i.heading }}" style="width: 100%; height: auto;">
-                <h2>{{ i.heading }}</h2>
-                <p>Uploaded by: {{ i.user.username }}</p>
-                <p>Uploaded on: {{ i.date }}</p>
-            </div>
-            {% endfor %}
-        
+            
+                {%for i in image%}
+                    <div class="img_card">
+                        <img src="{{ i.image.url }}" alt="{{ i.heading }}" style="width: 100%; height: auto;">
+                        <h2>{{ i.heading }}</h2>
+                        <p>Uploaded by: {{ i.user.username }}</p>
+                        <p>Uploaded on: {{ i.date }}</p>
+                        <div class="curd">
+                            <a class="update" href="{% url 'img_update' i.id %}">Update</a>
+                            <a class="delete" href="{% url 'img_delete' i.id %}">Delete</a>
+                        </div>
+                    </div>
+                {% endfor %}
         </div>
     </div>
 
