--- a/config/templates/config/imgs_form.html
+++ b/config/templates/config/imgs_form.html
@@ -148,9 +148,9 @@
                 <ul>
                     <li ><a href="{% url 'img_list' %}">Home</a></li>
                     <li class="page_active"><a href="{% url 'img_add' %}">Add</a></li>
-                    <li><a href="">Profile</a></li>
+                    <li><a href="{% url 'user_img_list' %}">Profile</a></li>
                     {% if user.is_authenticated %}
-                        <li><a href="">Logout</a></li>
+                        <li><a href="{% url 'account_logout' %}">Logout</a></li>
                     {% else %}
                         <li><a href="{% url 'account_login' %}">Login</a></li>
                     {% endif %}
