--- a/config/templates/config/user_images.html
+++ b/config/templates/config/user_images.html
@@ -168,7 +168,7 @@
                     <li><a href="{% url 'img_add' %}">Add</a></li>
                     <li  class="page_active"><a href="">Profile</a></li>
                     {% if user.is_authenticated %}
-                        <li><a href="">Logout</a></li>
+                        <li><a href="{% url 'account_logout' %}">Logout</a></li>
                     {% else %}
                         <li><a href="{% url 'account_login' %}">Login</a></li>
                     {% endif %}
